# rclone-wrapper

./: .gitattributes  .gitignore  ANALISI_CODEBASE.md  LICENSE  README.md  cli.py  pyproject.toml  rclone-wrapper.py  requirements.txt
.github/workflows/: ci.yml
config_examples/: CONFIG_REFERENCE.md  backup.json  backup_extended.json  bisync.json  common.json  compare.json  report_template.json  sync.json  sync.json.template
examples/: README.md  example_backup_extended.py  example_bisync.py  example_bisync_resync_selective.py  example_cli_usage.bat  example_cli_usage.sh  example_compare.py  example_sync.py
rclone_wrapper/: __init__.py  __main__.py  backup.py  backup_extended.py  constants.py  exceptions.py  utils.py
rclone_wrapper/config/: __init__.py  loader.py  models.py
rclone_wrapper/core/: __init__.py
rclone_wrapper/core/command/: __init__.py  builder.py  executor.py  protocol.py
rclone_wrapper/core/filters/: __init__.py  builder.py
rclone_wrapper/core/remote/: __init__.py  capabilities.py
rclone_wrapper/domain/: __init__.py  enums.py  models.py  value_objects.py
rclone_wrapper/logging/: __init__.py  adapters.py  capture.py  offline_parser.py  output_analyzer.py  protocol.py
rclone_wrapper/logging/formatters/: __init__.py  batch.py
rclone_wrapper/logging/parsers/: __init__.py  base.py
rclone_wrapper/operations/: __init__.py  base.py  bisync.py  compare.py  factory.py  sync.py  validators.py
rclone_wrapper/operations/helpers/: __init__.py
